<resources>
    <string name="app_name">Footprints</string>
    <string name="no_records_found">No Records Found!</string>
    <string name="str_see_all_visits">See All Visits</string>
    <string name="choose_from_nearby_locations">Choose from nearby locations</string>
    <string name="str_never_ask_title">Never ask Title</string>
    <string name="str_never_ask_message">Never Ask Message</string>
    <string name="str_permission_enable">Please enable the permission</string>
    <string name="str_go_to_settings">go to Settings</string>
    <string name="str_cancel">Cancel</string>
    <string name="str_title_permission_denied">Permission Denied</string>
    <string name="str_location_permission_alert_message">Without this permission the app is unable to track your visited place.Are you sure you want to deny this permission?</string>
    <string name="str_i_am_sure">I\'M SURE</string>
    <string name="str_re_try">RE-TRY</string>
    <string name="update_from_nearby_locations">Update from nearby locations</string>
    <string name="str_no">No</string>
    <string name="str_yes">Yes</string>
    <string name="str_alert_message_delete_location">Are you sure you want to delete this location.</string>
    <string name="str_alert_message_update_location">Are you sure you want to update this location.</string>
    <string name="str_confirmation">NA</string>
    <string name="str_na">NA</string>
    <string name="str_original_location">Original Location</string>
    <string name="str_nearby_location">Nearby Location</string>
    <string name="str_approx_location">Approx Location</string>
    <string name="str_date">Date:</string>
    <string name="str_visits">Visits:</string>
    <string name="time">Time:</string>
    <string name="from">From:</string>
    <string name="to">To:</string>
    <string name="no_net_avail">No Network Available!</string>
    <string name="str_auto_start_permission">Please enable Auto Start permission for</string>
    <string name="str_gps_notification_msg">Location is off app wont able to save your current location</string>
    <string name="address">Address</string>
    <string name="location_turned_off">Location turned off!</string>
    <string name="msg_ask_to_turn_gps_on">Your Location seems to be disabled, without Location App not able to save your visited places. Do you want to turn it on?</string>
    <string name="msg_toast_choose_battery_saving">Enable location and choose Battery Saving Mode</string>
    <string name="version_name">Version 1.2</string>
    <string name="search">Search all places</string>
    <string name="recent_places">Recent places</string>
    <string name="hint_notation_text">Please enter you address</string>
    <string name="str_save">Save</string>
    <string name="str_alert_message_save_text_notation">Do you want to update the address.</string>
    <string name="str_alert_message_change_address">Do you want to save your changes.</string>
</resources>
