<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="@dimen/add_text_notes_dialog_width"
    android:layout_gravity="center_horizontal"
    android:background="@drawable/bg_color"
    android:padding="@dimen/margin_25dp"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tv_alert_message_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_10dp"
        android:textColor="@color/colorSplashBackground"
        android:textSize="@dimen/confirmation_alert_msg_title_text_size"
        android:visibility="visible"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:text="@string/app_name"
        />

    <TextView
        android:id="@+id/tv_alert_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_10dp"
        android:layout_marginBottom="@dimen/margin_10dp"
        android:textColor="@color/color_confirmation_msg_text"
        android:textSize="@dimen/confirmation_alert_msg_text_size"
        android:visibility="visible"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:text="@string/str_confirmation"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/margin_10dp"
        android:layout_marginBottom="@dimen/margin_10dp"
        android:weightSum="2">
        <Button
            android:id="@+id/btn_confirmation_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/btn_cancel_save_note"
            android:layout_weight="1"
            android:background="@color/color_cancel_btn"
            android:textAllCaps="false"
            android:textColor="@color/color_cancel_btn_text"
            android:text="@string/str_no"
            />

        <Button
            android:id="@+id/btn_confirmation_yes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/btn_cancel_save_note"
            android:layout_weight="1"
            android:background="@color/color_save_btn"
            android:textAllCaps="false"
            android:layout_marginLeft="@dimen/margin_5dp"
            android:textColor="@color/color_save_btn_text"
            android:text="@string/str_yes"/>
    </LinearLayout>
</LinearLayout>