<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="@dimen/add_text_notes_dialog_width"
    android:layout_gravity="center_horizontal"
    android:background="@drawable/bg_color"
    android:layout_height="wrap_content">
    <EditText
        android:id="@+id/edt_note_text"
        android:layout_width="match_parent"
        android:padding="@dimen/margin_5dp"
        android:gravity="top|left"
        android:textColor="@color/color_black"
        android:hint="@string/hint_notation_text"
        android:textColorHint="@color/color_note_hint_text"
        android:layout_margin="@dimen/margin_10dp"
        android:background="@drawable/edit_text_border"
        android:layout_height="@dimen/add_edit_address_height"
        android:textSize="@dimen/note_text_size"
        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/margin_5dp"
        android:layout_marginBottom="@dimen/margin_15dp"
        android:weightSum="2">
        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/btn_cancel_save_note"
            android:layout_weight="1"
            android:background="@color/color_cancel_btn"
            android:textAllCaps="false"
            android:textColor="@color/color_save_btn_text"
            android:text="@string/str_cancel"
            />

        <Button
            android:id="@+id/btn_save"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/btn_cancel_save_note"
            android:layout_weight="1"
            android:background="@color/color_hint"
            android:textAllCaps="false"
            android:layout_marginLeft="@dimen/margin_5dp"
            android:textColor="@color/color_save_btn_text"
            android:text="@string/str_save"/>
    </LinearLayout>
</LinearLayout>