<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:CardView="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:id="@+id/lyt_lin_search_offline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:visibility="visible"
        CardView:cardElevation="6dp"
        CardView:cardMaxElevation="10dp"
        app:cardCornerRadius="3dp">

        <RelativeLayout
            android:id="@+id/lyt_for_card_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <RelativeLayout
                android:id="@+id/lyt_original_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/margin_10dp">
                <!--<ImageView
                    android:layout_alignParentTop="true"
                    android:layout_alignParentBottom="true"
                    android:id="@+id/iv_map_item"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />-->

                <ImageButton
                    android:id="@+id/btn_delete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentTop="true"
                    android:background="@android:color/transparent"
                    android:src="@drawable/btn_trash_list_item" />
                <ImageButton
                    android:id="@+id/btn_edit_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/btn_delete"
                    android:layout_alignParentRight="true"
                    android:background="@android:color/transparent"
                    android:src="@drawable/btn_edit_folder" />

                <TextView
                    android:id="@+id/tv_your_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/tv_address"
                    android:layout_alignParentTop="true"
                    android:layout_alignStart="@+id/tv_address"
                    android:background="@drawable/bg_round_corner_original"
                    android:fontFamily="@font/roboto"
                    android:gravity="center"
                    android:paddingLeft="@dimen/margin_5dp"
                    android:paddingRight="@dimen/margin_5dp"
                    android:text="@string/str_original_location"
                    android:textColor="@color/color_location_title"
                    android:textSize="@dimen/ts_location_title"
                    android:visibility="visible" />

                <TextView
                    android:id="@+id/tv_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_your_location"
                    android:layout_toLeftOf="@id/btn_edit_address"
                    android:layout_marginTop="@dimen/margin_5dp"
                    android:fontFamily="@font/roboto_light"
                    android:gravity="left"
                    android:text="@string/str_na"
                    android:textColor="@color/color_location_details"
                    android:textSize="@dimen/ts_location_info"
                    android:visibility="visible" />

                <TextView
                    android:id="@+id/tv_location_vicinity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/tv_address"
                    android:layout_alignStart="@+id/tv_address"
                    android:layout_toLeftOf="@id/btn_edit_address"
                    android:layout_below="@+id/tv_address"
                    android:fontFamily="@font/roboto_light"
                    android:gravity="left"
                    android:text="@string/str_na"
                    android:textColor="@color/color_location_details"
                    android:textSize="@dimen/ts_location_info"
                    android:visibility="visible" />

                <RelativeLayout
                    android:id="@+id/lyt_nearby_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toLeftOf="@id/btn_edit_address"
                    android:layout_alignLeft="@+id/tv_visit_date"
                    android:layout_alignStart="@+id/tv_visit_date"
                    android:layout_below="@+id/tv_location_vicinity"
                    android:layout_marginTop="8dp">

                    <TextView
                        android:id="@+id/tv_nearby_your_location"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:background="@drawable/bg_round_corner_near_by"
                        android:fontFamily="@font/roboto"
                        android:gravity="center"
                        android:paddingLeft="@dimen/margin_5dp"
                        android:paddingRight="@dimen/margin_5dp"
                        android:text="@string/str_nearby_location"
                        android:textColor="@color/color_location_title"
                        android:textSize="@dimen/ts_location_title"
                        android:visibility="visible" />

                    <TextView
                        android:id="@+id/tv_nearby_address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/tv_nearby_your_location"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="@dimen/margin_5dp"
                        android:fontFamily="@font/roboto_light"
                        android:gravity="left"
                        android:text="@string/str_na"
                        android:textColor="@color/color_location_details"
                        android:textSize="@dimen/ts_location_info"
                        android:visibility="visible" />

                    <TextView
                        android:id="@+id/tv_nearby_location_vicinity"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/tv_nearby_address"
                        android:layout_centerHorizontal="true"
                        android:fontFamily="@font/roboto_light"
                        android:gravity="left"
                        android:text="@string/str_na"
                        android:textColor="@color/color_location_details"
                        android:textSize="@dimen/ts_location_info"
                        android:visibility="visible" />


                </RelativeLayout>

                <TextView
                    android:id="@+id/tv_visit_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_below="@id/lyt_nearby_location"
                    android:layout_marginTop="@dimen/margin_5dp"
                    android:fontFamily="@font/roboto_light"
                    android:gravity="center"
                    android:text="@string/str_date"
                    android:textColor="@color/color_location_details"
                    android:textSize="@dimen/ts_location_info"
                    android:visibility="visible" />

                <TextView
                    android:id="@+id/tv_visits"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_below="@id/tv_visit_date"
                    android:layout_toRightOf="@id/tv_time"
                    android:fontFamily="@font/roboto_light"
                    android:gravity="right"
                    android:text="@string/str_visits"
                    android:textColor="@color/color_location_details"
                    android:textSize="@dimen/ts_location_info"
                    android:visibility="visible" />


                <TextView
                    android:id="@+id/tv_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/tv_visit_date"
                    android:fontFamily="@font/roboto_light"
                    android:gravity="center"
                    android:text="@string/time"
                    android:textColor="@color/color_location_details"
                    android:textSize="@dimen/ts_location_info"
                    android:visibility="visible" />

                <Button
                    android:id="@+id/btn_all_visits"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/location_screen_btn_height"
                    android:layout_below="@+id/tv_time"
                    android:layout_marginTop="@dimen/margin_10dp"
                    android:background="@drawable/bg_round_corner_button"
                    android:fontFamily="@font/roboto_light"
                    android:text="@string/str_see_all_visits"
                    android:textColor="#ffffff"
                    android:textSize="@dimen/ts_button_location_screen" />

                <Button
                    android:id="@+id/btn_choose_nearby"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/location_screen_btn_height"
                    android:layout_below="@+id/btn_all_visits"
                    android:layout_marginTop="@dimen/margin_10dp"
                    android:background="@drawable/bg_round_corner_button"
                    android:fontFamily="@font/roboto_light"
                    android:text="@string/update_from_nearby_locations"
                    android:textColor="#ffffff"
                    android:textSize="@dimen/ts_button_location_screen" />


            </RelativeLayout>

        </RelativeLayout>


    </android.support.v7.widget.CardView>


</RelativeLayout>